--- a/index.css
+++ b/index.css
@@ -9,12 +9,14 @@ p.address{
   margin-left: 20px;
 }
 #content{
-  font-family: Verdana, Geneva, sans-serif;
+   font-family: "Courier New", Courier, monospace; 
+  /*font-family: Verdana, Geneva, sans-serif;*/
   /*font-family: "Lucida Console", Monaco, monospace*/
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
 }
+
 #menu{
   width: auto;
   float: right;
