--- a/index.css
+++ b/index.css
@@ -170,3 +170,12 @@ p.address{
     background: #ff4136;
     float: right
 }
+
+code {
+    font-family: Consolas,"courier new";
+    color:black;
+    background-color: #f1f1f1;
+    padding: 2px;
+    font-size: 105%;
+    font-weight: bold;
+  }
