update some fix

--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 h2 /*{color: #92B901;}*/
 body #header{
+font-family: "Lucida Console", Monaco, monospace;
 /*color: #ff6187;*/}
+
 body{/*color: #707070;*/}
 ul.circle{
   list-style-type:circle;
